#
# cc-common
#
# Alistair King, CAIDA, UC San Diego
# corsaro-info@caida.org
#
# Copyright (C) 2012 The Regents of the University of California.
#
# This file is part of cc-common.
#
# cc-common is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# cc-common is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with cc-common.  If not, see <http://www.gnu.org/licenses/>.
#

AM_CPPFLAGS =

noinst_LTLIBRARIES = libjsmn.la

libjsmn_la_SOURCES = \
	jsmn.c jsmn.h

ACLOCAL_AMFLAGS = -I m4

CLEANFILES = *~
