#
# red black tree
# 
# Vasco Asturiano, CAIDA, UC San Diego
# corsaro-info@caida.org
# 
# Copyright (C) 2014 The Regents of the University of California.
# 
# This file is part of cc-common.
# 
# cc-common is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# cc-common is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with cc-common.  If not, see <http://www.gnu.org/licenses/>.
# 

AM_CPPFLAGS = 

noinst_LTLIBRARIES = librbtree.la

librbtree_la_SOURCES = \
    stack.c stack.h \
    misc.c misc.h \
	red_black_tree.c red_black_tree.h


ACLOCAL_AMFLAGS = -I m4

CLEANFILES = *~
